objects/Deployment__c/fields/Actual_Downtime_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Downtime_in_Hours__c</fullName>
    <label>Actual Downtime in Hours</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>