objects/Deployment__c/fields/Admin_Tasks_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_Tasks_Reference_ID__c</fullName>
    <label>Admin Tasks Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>