objects/Deployment__c/fields/CI_Build_Artifactories_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>CI_Build_Artifactories_Version_ID__c</fullName>
    <label>CI Build Artifactories Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>