objects/Deployment__c/fields/Deployed_Environment__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Environment__c</fullName>
    <label>Deployed Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>STE</fullName>
            </value>
            <value>
                <fullName>LTNPOC</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>