objects/Deployment__c/fields/Deployment_Details__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Details__c</fullName>
    <label>Deployment Details</label>
    <type>TextArea</type>
</CustomField>