objects/Deployment__c/fields/Deployment_done_by__c.field-meta.xml
<CustomField>
    <fullName>Deployment_done_by__c</fullName>
    <label>Deployment done by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harish</fullName>
            </value>
            <value>
                <fullName>Suresh</fullName>
            </value>
            <value>
                <fullName>Vikas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>