objects/Deployment__c/fields/Deployment_Effort_in_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Effort_in_Man_Hours__c</fullName>
    <label>Deployment Effort in Man Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>