objects/Deployment__c/fields/Deployment_Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Requested_by__c</fullName>
    <label>Deployment Requested by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>