objects/Deployment__c/fields/Deployment_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Requested_Date__c</fullName>
    <label>Deployment Requested Date</label>
    <type>Date</type>
</CustomField>