objects/Deployment__c/fields/Deployment_Requested_Mode__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Requested_Mode__c</fullName>
    <label>Deployment Requested Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>DevTracker</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Jan_Report</fullName>
            </value>
            <value>
                <fullName>Feb_Report</fullName>
            </value>
            <value>
                <fullName>Mar_Report</fullName>
            </value>
            <value>
                <fullName>Apr_Report</fullName>
            </value>
            <value>
                <fullName>May_Report</fullName>
            </value>
            <value>
                <fullName>Jun_Report</fullName>
            </value>
            <value>
                <fullName>Jul_Report</fullName>
            </value>
            <value>
                <fullName>Aug_Report</fullName>
            </value>
            <value>
                <fullName>Sep_Report</fullName>
            </value>
            <value>
                <fullName>Oct_Report</fullName>
            </value>
            <value>
                <fullName>Nov_Report</fullName>
            </value>
            <value>
                <fullName>Dec_Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>