objects/Deployment__c/fields/Effort_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Effort_in_Hours__c</fullName>
    <label>Effort in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>