objects/Deployment__c/fields/Efforts_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Efforts_in_minutes__c</fullName>
    <label>Efforts in minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>