objects/Deployment__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>STE</fullName>
            </value>
            <value>
                <fullName>LTNPOC</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>