objects/Deployment__c/fields/No_of_Failed_Changes_in_Production_after__c.field-meta.xml
<CustomField>
    <fullName>No_of_Failed_Changes_in_Production_after__c</fullName>
    <label>No of Failed Changes in Production after</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>