objects/Deployment__c/fields/No_of_Failures_Incidents_reported_in_Pro__c.field-meta.xml
<CustomField>
    <fullName>No_of_Failures_Incidents_reported_in_Pro__c</fullName>
    <label>No of Failures/Incidents reported in Pro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>