objects/Deployment__c/fields/Planned_Downtime_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Downtime_in_Hours__c</fullName>
    <label>Planned Downtime in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>