objects/Deployment__c/fields/Post_Deployment_Effort_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Effort_in_Hours__c</fullName>
    <label>Post-Deployment Effort in Hours</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>