objects/Deployment__c/fields/Pre_Deployment_Validation_Errors_Count__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Validation_Errors_Count__c</fullName>
    <label>Pre-Deployment Validation Errors Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>