objects/Deployment__c/fields/Requested_Mode__c.field-meta.xml
<CustomField>
    <fullName>Requested_Mode__c</fullName>
    <label>Requested Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>