objects/Deployment__c/fields/Requested_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_Task_Name__c</fullName>
    <label>Requested Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>