objects/Deployment__c/fields/Sandbox_Admin_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Admin_Task_ID__c</fullName>
    <label>Sandbox Admin Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>