objects/Deployment__c/fields/Service_Now_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Now_Ticket_ID__c</fullName>
    <label>Service Now - Ticket ID</label>
    <type>TextArea</type>
</CustomField>