objects/Deployment__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>((Efforts_in_minutes__c /60)+ Effort_in_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>