objects/Deployment__c/fields/Type_of_task__c.field-meta.xml
<CustomField>
    <fullName>Type_of_task__c</fullName>
    <label>Type of task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox Creation</fullName>
            </value>
            <value>
                <fullName>Sandbox Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>