objects/Deployment__c/recordTypes/Daily_Deployments.recordType-meta.xml
<RecordType>
    <fullName>Daily_Deployments</fullName>
    <active>true</active>
    <description>To Capture the daily deployments</description>
    <label>Daily Deployments</label>
</RecordType>