objects/Deployment__c/recordTypes/Prod_Data.recordType-meta.xml
<RecordType>
    <fullName>Prod_Data</fullName>
    <active>true</active>
    <description>Production Data Capture</description>
    <label>Prod Data</label>
</RecordType>