objects/Deployment__c/recordTypes/Production_Admin_Tasks.recordType-meta.xml
<RecordType>
    <fullName>Production_Admin_Tasks</fullName>
    <active>true</active>
    <description>Production Admin Tasks</description>
    <label>Production Admin Tasks</label>
</RecordType>