objects/Deployment__c/recordTypes/Sandbox_Admin_Tasks.recordType-meta.xml
<RecordType>
    <fullName>Sandbox_Admin_Tasks</fullName>
    <active>true</active>
    <description>Sandbox Admin Tasks like User Creation, Cut-Over plan etc..,</description>
    <label>Sandbox Admin Tasks</label>
</RecordType>