objects/Deployment__c/recordTypes/Sandbox_Refresh.recordType-meta.xml
<RecordType>
    <fullName>Sandbox_Refresh</fullName>
    <active>true</active>
    <description>Sandbox Refresh</description>
    <label>Sandbox Refresh</label>
</RecordType>