objects/Deployment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Task_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>