objects/Deployment__c/listViews/Last_week_Deployments.listView-meta.xml
<ListView>
    <fullName>Last_week_Deployments</fullName>
    <columns>NAME</columns>
    <columns>CI_Build_Artifactories_Version_ID__c</columns>
    <columns>Deployment_done_by__c</columns>
    <columns>Deployment_Requested_Date__c</columns>
    <columns>Deployment_Status__c</columns>
    <columns>Deployed_Environment__c</columns>
    <columns>Deployment_Effort_in_Man_Hours__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This week Deployments</label>
</ListView>